fixed eye icon alignment in login and sign in

--- a/generator/services/seed/signup/signup.component.scss
+++ b/generator/services/seed/signup/signup.component.scss
@@ -23,6 +23,7 @@ label {
 .align-right {
   float: right;
   margin-top: -26px;
+  margin-right: 10px;
 }
 
 .invalid-feedback {
